--- a/public/css/custom_theme.css
+++ b/public/css/custom_theme.css
@@ -9,6 +9,14 @@
 }
 
 
+ .table-hover td {
+	font-size: 1rem;
+	vertical-align: middle;
+}
+
+ .table-hover .btn {
+	padding: 0.6rem
+}
 
 .align-center {
 	text-align: center;
@@ -57,6 +65,22 @@ form input:not([type="submit"]) {
 	height: 2rem;
 }
 
+/*======= File input as Button =======*/
+.upload-btn-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.upload-btn-wrapper input[type=file] {
+  height: 100%;
+  width: 100%;
+
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
 
 
 /* ============= TABLE ============= */
