--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,3 +1,42 @@
+/* ========== EVENTS MANAGEMENT =============*/
+
+ .my-tbl {
+	height: 400px;
+	max-height: 400px;
+	overflow-y: auto;
+	width: 100%;
+}
+
+/* venue form */
+.img_container{
+	overflow: hidden;
+	height: 140px;
+	background-color: #E8E8E8FF;
+	margin-top: 10px;
+}
+.img_container img{
+	position: relative;
+	width: 70%;
+	/*height: 100%;*/
+	 top: 50%;
+    transform: translateY(-50%);
+}
+
+.btn-upload-venue-img{
+	position: absolute;
+	
+	top: 0;
+	right: 15px;
+}
+
+#venue-form .btn-upload-venue-img .btn{
+	width:35px;
+	height: 35px;
+	padding: 0;
+	margin: 0;
+}
+
+
 /*========== COURSE LANDING PAGE ==========*/
 
 .course-category {
