--- a/public/css/global.css
+++ b/public/css/global.css
@@ -30,6 +30,7 @@
 
 
 
+
 /* ========== EVENTS MANAGEMENT =============*/
 
 .my-tbl {
@@ -38,6 +39,7 @@
 	overflow-y: auto;
 	width: 100%;
 }
+
 
 
 
@@ -64,6 +66,7 @@
 .events-form .img_container {
 	height: 360px;
 }
+
 
 
 
@@ -115,6 +118,7 @@
 
 
 
+
 /*========== COURSE LANDING PAGE ==========*/
 
 .course-category {
@@ -124,11 +128,75 @@
 	padding-top: 5px;
 	padding-bottom: 5px;
 	margin-bottom: 5px;
+	margin-top: 15px;
 }
 
+.course {
+	position: relative;
+}
+
+.course h3 {
+	padding-top: 25px;
+	text-align: center;
+}
+
+.course h3+hr {
+	margin-top: 0px;
+}
+
+
+/* alternating courses */
+/*
+.categ-courses .course:nth-child(even) h3{
+	text-align: right;
+}
+
+.categ-courses .course:nth-child(even) .course-desc {
+	float: right;
+	padding-left: 15%;
+	padding-right: 10px;
+	background: linear-gradient( -90deg,
+	rgba(255, 255, 255, 1),
+	rgba(255, 255, 255, .75) 82%,
+	rgba(255, 255, 255, 0.0));
+}
+*/
 .course-desc {
+	width: 68%;
 	text-indent: 4rem;
 	text-align: justify;
+	min-height: 300px;
+	max-height: 600px;
+	overflow-y: hidden;
+	padding: 10px;
+	padding-right: 5%;
+	/*padding-right: 15%;*/
+	background: linear-gradient( 90deg,
+	rgba(255, 255, 255,1),
+	rgba(255, 255, 255,.75) 20%,
+	rgba(255, 255, 255,.75) 90%,
+	rgba(255, 255, 255, 0.0));
+	color: #1E1E1EFF;
+}
+
+.course-desc:hover {
+	overflow-y: auto;
+}
+
+
+.course-desc p {
+	margin-bottom: 0px;
+	font-size: 1.2rem;
+	letter-spacing: 2px;
+}
+
+
+.course-img {
+	position: relative;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 }
 
 
@@ -156,6 +224,7 @@ div.courses form .img_container {
 	height: 400px;
 	margin-top: initial;
 }
+
 div.courses form .course-add-img {
 	position: absolute;
 	top: 0px;
@@ -191,11 +260,22 @@ div.select-course .row {
 	height: 10em;
 	max-height: 10em;
 	overflow: hidden;
-	margin-bottom: 10px;
+	width: 100%;
+	padding: 20px;
+
+	background: linear-gradient( to bottom,
+	rgba(90, 90, 90, .75),
+	rgba(90, 90, 90, .75));
+	color: white;
 }
 
 .courses .card .card-text:hover {
 	overflow-y: auto;
+}
+
+.courses .card .card-text p{
+	letter-spacing: 2px;
+	font-size: 1rem;
 }
 
 .courses .card-deck .card-footer {
@@ -219,6 +299,7 @@ div.select-course .row {
 
 
 
+
 /*================ MEMBERSHIP FORM ==========*/
 
 .membership-form {
@@ -233,6 +314,7 @@ div.select-course .row {
 .userCredential {
 	max-width: 500px;
 }
+
 
 
 
@@ -278,6 +360,7 @@ div.select-course .row {
 
 
 
+
 /*================= LOGIN ======================*/
 
 .login-input {
@@ -305,7 +388,17 @@ div.select-course .row {
 
 
 
+
 /*================= HOME =================*/
+
+.home.page-body {
+		/*#D8EDE5FF 20%,	*/
+	background: linear-gradient( to bottom,
+	#FFFFFFFF 20%,	
+	#FFFFFFFF 25%,
+	#FFFFFFFF);
+
+}
 
 .home section h3 {
 	text-align: center;
@@ -331,12 +424,14 @@ ul.whats-bisd {
 
 .upcoming-events .list {
 	height: 500px;
-	overflow-y: hidden;
-}
-
-.upcoming-events .list:hover {
+	/*overflow-y: hidden;*/
 	overflow-y: auto;
 }
+
+
+/*.upcoming-events .list:hover {
+	overflow-y: auto;
+}*/
 
 .upcoming-events .img_container {
 	height: 200px;
@@ -351,15 +446,18 @@ ul.whats-bisd {
 	margin-bottom: 20px;
 	font-size: 0.8rem;
 }
-.upcoming-events .card >*:not(.img_container) {
+
+.upcoming-events .card>*:not(.img_container) {
 	padding-left: 1rem;
 	padding-right: 1rem;
 }
+
 .upcoming-events .card h5 {
 	padding-top: 10px;
 	font-size: 1rem;
 	text-align: center;
 }
+
 .upcoming-events .card p {
 	text-indent: 20px;
 	text-align: justify;
@@ -396,6 +494,7 @@ ul.whats-bisd {
 .learningCenter-ph h3 {
 	text-align: initial;
 }
+
 
 
 
@@ -476,6 +575,7 @@ ul.whats-bisd {
 .alert hr {
 	margin: 0.5rem 0;
 }
+
 
 
 
