--- a/public/css/global.css
+++ b/public/css/global.css
@@ -3,10 +3,11 @@
 
 .dashboard .container {
 	min-height: 80vh;
+	padding-top: 0.8rem;
 }
 
 .dashboard .heading h1{
-	position: absolute;
+	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
 }
