--- a/public/css/global.css
+++ b/public/css/global.css
@@ -498,13 +498,103 @@ div.select-course .row {
 
 /* HOME-LANDING 
 ---------------------------------------------- */
+body{
+	margin:0;
+}
+/* The hero image */
+.hero-image {
+    /* The image used */
+  
+
+    /* Set a specific height */
+	
+    height: 50%;
+	opacity: 0.9;
+	overflow:hidden;
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    
+    background-size: auto;
+    position: relative;
+    
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 9%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+     text-shadow: 2px 4px 2px #000000;
+}
+.hero-image2 {
+    /* The image used */
+  
+
+    /* Set a specific height */
+	
+    height:800px;
+	opacity: 0.9;
+	overflow:hidden;
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+   	background-size: auto;
+
+    position: relative;
+    background-color: rgba(0,0,0,.15);
+}
+
+/* Place text in the middle of the image */
+.hero-text2 {
+    text-align: center;
+    position: absolute;
+    top: 18%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+        text-shadow: 0 0 3px #D8EDE5FF;
+}
+
+.hero-image3 {
+    /* The image used */
+  
+
+    /* Set a specific height */
+	
+    height:800px;
+	opacity: 0.9;
+	overflow:hidden;
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+   	background-size: auto;
+
+    position: relative;
+    background-color: rgba(0,0,0,.15);
+}
+
+/* Place text in the middle of the image */
+.hero-text3 {
+    text-align: center;
+    position: absolute;
+    top: 18%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+        text-shadow: 0 0 10px #000;
+}
 
 .home.page-body {
 	/*#D8EDE5FF 20%,	*/
 	background: linear-gradient( to bottom,
-	#FFFFFFFF 20%,
-	#FFFFFFFF 25%,
-	#FFFFFFFF);
+	rgba(52, 183, 202, 1),
+	#77ddaa,
+	#FFFFFFFF,
+	#77ddaa);
 }
 
 .home section h3 {
@@ -664,9 +754,9 @@ ul.whats-bisd {
 
 	background: linear-gradient( to bottom,
 	rgba(52, 183, 202, 1),
+	#77ddaa,
 	#FFFFFFFF,
-	#FFFFFFFF,
-	white);
+	#77ddaa);
 }
 
 .page-body>.container {
