--- a/public/css/global.css
+++ b/public/css/global.css
@@ -584,7 +584,7 @@ body{
     top: 18%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: black;
         text-shadow: 0 0 10px #000;
 }
 
