--- a/public/css/global.css
+++ b/public/css/global.css
@@ -6,7 +6,7 @@
 	padding-top: 0.8rem;
 }
 
-.dashboard .heading h1{
+.dashboard .heading h1 {
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
@@ -54,6 +54,7 @@
 
 
 
+
 /* ACCOUNT VIEW
 ----------------------------------- */
 
@@ -82,6 +83,7 @@
 	font-weight: 600;
 	font-size: 2rem;
 }
+
 
 
 
@@ -124,6 +126,7 @@
 
 
 
+
 /* EVENTS 
 ----------------------------------- */
 
@@ -133,6 +136,7 @@
 	overflow-y: auto;
 	width: 100%;
 }
+
 
 
 
@@ -159,6 +163,7 @@
 .events-form .img_container {
 	height: 360px;
 }
+
 
 
 
@@ -210,6 +215,7 @@
 
 
 
+
 /* COURSE-LANDING 
 ---------------------------------- */
 
@@ -235,6 +241,7 @@
 .course h3+hr {
 	margin-top: 0px;
 }
+
 
 
 
@@ -297,6 +304,7 @@
 	background-position: center;
 	background-size: cover;
 }
+
 
 
 
@@ -399,6 +407,7 @@ div.select-course .row {
 
 
 
+
 /* MEMBERSHIP FORM 
 ---------------------------------- */
 
@@ -414,6 +423,7 @@ div.select-course .row {
 .userCredential {
 	max-width: 500px;
 }
+
 
 
 
@@ -463,6 +473,7 @@ div.select-course .row {
 
 
 
+
 /* ACCOUNT LOGIN 
 ------------------------------------------ */
 
@@ -496,96 +507,97 @@ div.select-course .row {
 
 
 
+
 /* HOME-LANDING 
 ---------------------------------------------- */
-body{
-	margin:0;
+
+body {
+	margin: 0;
 }
+
+
 /* The hero image */
+
 .hero-image {
-    /* The image used */
-  
-
-    /* Set a specific height */
-	
-    height: 50%;
+	/* Set a specific height */
+	height: 75vh;
+	width: 100%;
 	opacity: 0.9;
-	overflow:hidden;
-    /* Position and center the image to scale nicely on all screens */
-    background-position: center;
-    background-repeat: no-repeat;
-    
-    background-size: auto;
-    position: relative;
-    
+	overflow: hidden;
+	/* Position and center the image to scale nicely on all screens */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	display:  inline-block; 
 }
 
+
 /* Place text in the middle of the image */
+
 .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 9%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-     text-shadow: 2px 4px 2px #000000;
+	text-align: center;
+	position: relative ;
+	margin-top:  10%;
+	left: 50%;
+	transform: translateX(-50%);
+	color: white;
+	text-shadow: 2px 4px 2px #000000;
 }
+
 .hero-image2 {
-    /* The image used */
-  
-
-    /* Set a specific height */
-	
-    height:800px;
+	/* The image used */
+	/* Set a specific height */
+	height: 800px;
 	opacity: 0.9;
-	overflow:hidden;
-    /* Position and center the image to scale nicely on all screens */
-    background-position: center;
-    background-repeat: no-repeat;
-   	background-size: auto;
+	overflow: hidden;
+	/* Position and center the image to scale nicely on all screens */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: auto;
 
-    position: relative;
-    background-color: rgba(0,0,0,.15);
+	position: relative;
+	background-color: rgba(0, 0, 0, .15);
 }
+
 
 /* Place text in the middle of the image */
+
 .hero-text2 {
-    text-align: center;
-    position: absolute;
-    top: 18%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: black;
-        text-shadow: 0 0 3px #D8EDE5FF;
+	text-align: center;
+	position: absolute;
+	top: 18%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: black;
+	text-shadow: 0 0 3px #D8EDE5FF;
 }
 
 .hero-image3 {
-    /* The image used */
-  
-
-    /* Set a specific height */
-	
-    height:800px;
+	/* The image used */
+	/* Set a specific height */
+	height: 800px;
 	opacity: 0.9;
-	overflow:hidden;
-    /* Position and center the image to scale nicely on all screens */
-    background-position: center;
-    background-repeat: no-repeat;
-   	background-size: auto;
+	overflow: hidden;
+	/* Position and center the image to scale nicely on all screens */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: auto;
 
-    position: relative;
-    background-color: rgba(0,0,0,.15);
+	position: relative;
+	background-color: rgba(0, 0, 0, .15);
 }
 
+
 /* Place text in the middle of the image */
+
 .hero-text3 {
-    text-align: center;
-    position: absolute;
-    top: 18%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: black;
-        text-shadow: 0 0 5px #000;
+	text-align: center;
+	position: absolute;
+	top: 18%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: black;
+	text-shadow: 0 0 5px #000;
 }
 
 .home.page-body {
@@ -595,6 +607,7 @@ body{
 	#ffffff,
 	#77ddaa,
 	#ffffff);
+	position: relative;
 }
 
 .home section h3 {
@@ -624,6 +637,7 @@ ul.whats-bisd {
 	/*overflow-y: hidden;*/
 	overflow-y: auto;
 }
+
 
 
 
@@ -695,6 +709,7 @@ ul.whats-bisd {
 .learningCenter-ph h3 {
 	text-align: initial;
 }
+
 
 
 
@@ -782,6 +797,7 @@ ul.whats-bisd {
 .alert hr {
 	margin: 0.5rem 0;
 }
+
 
 
 
