--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,3 +1,11 @@
+/*UPDDATE-ARTICLE
+ -----------------------------------*/
+.update-article form{
+width: 100%;
+margin: initial;
+filter: none;
+}
+
 /* DASHBOARD
 ----------------------------------- */
 
@@ -12,7 +20,7 @@
 	transform: translateY(-50%);
 }
 
-.dashboard .logo {
+.logo {
 	position: relative;
 	display: inline-block;
 	width: 150px;
@@ -22,7 +30,7 @@
 	overflow: hidden;
 }
 
-.dashboard .logo img {
+.logo img {
 	width: 110%;
 }
 
@@ -62,12 +70,16 @@
 .webmess-header h2{
 	display: inline;
 }
-.webmess-header a{
+.webmess-header .edit-article{
 	float: right;
 	color: white;
 	border: 1px solid white;
 }
 
+.edit-article:hover{
+	color: var(--green);
+	background-color: #fff;
+}
 
 
 
@@ -143,10 +155,6 @@
 
 
 
-
-
-
-
 /* EVENTS 
 ----------------------------------- */
 
@@ -199,6 +207,7 @@
 #venue-form {
 	margin: auto;
 	margin-top: 10px;
+	filter: none;
 }
 
 .img_container {
@@ -553,14 +562,10 @@ body {
 	margin: 0;
 }
 
-
-
-
 /* The hero image */
-
 .hero-image {
 	/* Set a specific height */
-	height: 75vh;
+	height: 60vh;
 	width: 100%;
 	opacity: 0.9;
 	overflow: hidden;
@@ -573,85 +578,36 @@ body {
 
 
 
-
 /* Place text in the middle of the image */
 
 .hero-text {
 	text-align: center;
-	position: relative;
-	margin-top: 10%;
-	left: 50%;
-	transform: translateX(-50%);
+	position: absolute;
+	width: 100%;
+	transform: translateY(-50%);
 	color: white;
 	text-shadow: 2px 4px 2px #000000;
 }
-
-.hero-image2 {
-	/* The image used */
-	/* Set a specific height */
-	height: 800px;
-	opacity: 0.9;
-	overflow: hidden;
-	/* Position and center the image to scale nicely on all screens */
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: auto;
-
-	position: relative;
-	background-color: rgba(0, 0, 0, .15);
-}
-
-
-
 
 /* Place text in the middle of the image */
 
 .hero-text2 {
 	text-align: center;
+	width: 100%;
 	position: absolute;
-	top: 18%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translateY(-50%);
 	color: black;
 	text-shadow: 0 0 3px #D8EDE5FF;
 }
 
-.hero-image3 {
-	/* The image used */
-	/* Set a specific height */
-	height: 800px;
-	opacity: 0.9;
-	overflow: hidden;
-	/* Position and center the image to scale nicely on all screens */
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: auto;
 
-	position: relative;
-	background-color: rgba(0, 0, 0, .15);
-}
-
-
-
-
-/* Place text in the middle of the image */
-
-.hero-text3 {
-	text-align: center;
-	position: absolute;
-	top: 18%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: black;
-	text-shadow: 0 0 5px #000;
-}
 
 .home.page-body {
 	/*#D8EDE5FF 20%,	*/
 	background: linear-gradient( to bottom,
 	rgba(52, 183, 202, 1),
 	#ffffff,
-	#77ddaa,
+	#ffffff,
 	#ffffff);
 	position: relative;
 }
@@ -793,7 +749,7 @@ ul.whats-bisd {
 	padding: 10px;
 	padding-left: 20px;
 	font-weight: 800;
-	background-color: #2388DBFF;
+	background-color: #6DCE97FF;
 	text-align: left;
 }
 
@@ -831,9 +787,10 @@ ul.whats-bisd {
 
 	background: linear-gradient( to bottom,
 	rgba(52, 183, 202, 1),
-	#77ddaa,
 	#FFFFFFFF,
-	#77ddaa);
+	#FFFFFFFF,
+	#FFFFFFFF);
+	/*#77ddaa);*/
 }
 
 .page-body>.container {
