--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,10 +1,30 @@
+/*NAVBAR
+----------------------------------- */
+.prrm-img{
+	height: 4rem !important;
+	overflow: hidden;
+	margin: 0px !important;
+	background-color: initial !important;
+}
+
+.navbar .dropdown-menu{
+	border: initial;
+	font-size: 0.9rem;	
+}
+
+
+
 /*UPDDATE-ARTICLE
  -----------------------------------*/
-.update-article form{
-width: 100%;
-margin: initial;
-filter: none;
+
+.update-article form {
+	width: 100%;
+	margin: initial;
+	filter: none;
 }
+
+
+
 
 /* DASHBOARD
 ----------------------------------- */
@@ -62,24 +82,29 @@ filter: none;
 	}
 }
 
-.webmess-header{
+.webmess-header {
 	background-color: var(--green);
 	padding: 0.5rem 0.5rem;
 	color: white;
 }
-.webmess-header h2{
+
+.webmess-header h2 {
 	display: inline;
 }
-.webmess-header .edit-article{
+
+.webmess-header .edit-article {
 	float: right;
 	color: white;
 	border: 1px solid white;
 }
 
-.edit-article:hover{
+.edit-article:hover {
 	color: var(--green);
 	background-color: #fff;
 }
+
+
+
 
 
 
@@ -92,12 +117,20 @@ filter: none;
 }
 
 .user-info>.row {
-	width: 600px;
+	width: inherit;
 	margin: 0 auto;
 	padding: 0;
 	padding-top: 2rem;
 	margin-bottom: 2rem;
 }
+
+@media screen and (min-width: 800px) {
+	.user-info>.row {
+		width: 600px;
+	}
+}
+
+
 
 .user-info .row>div {
 	text-align: initial;
@@ -111,6 +144,9 @@ filter: none;
 	font-weight: 600;
 	font-size: 2rem;
 }
+
+
+
 
 
 
@@ -155,6 +191,9 @@ filter: none;
 
 
 
+
+
+
 /* EVENTS 
 ----------------------------------- */
 
@@ -164,6 +203,9 @@ filter: none;
 	overflow-y: auto;
 	width: 100%;
 }
+
+
+
 
 
 
@@ -193,6 +235,9 @@ filter: none;
 .events-form .img_container {
 	height: 360px;
 }
+
+
+
 
 
 
@@ -251,6 +296,9 @@ filter: none;
 
 
 
+
+
+
 /* COURSE-LANDING 
 ---------------------------------- */
 
@@ -261,77 +309,46 @@ filter: none;
 	padding-top: 5px;
 	padding-bottom: 5px;
 	margin-bottom: 5px;
-	margin-top: 15px;
 }
 
 .course {
 	position: relative;
+	/*max-height: 300px;*/
+	margin-top: 10px;
+	margin-bottom: 10px;
+	overflow: hidden;
 }
 
-.course h3 {
-	padding-top: 25px;
+.course .more-details {
+	display: none;
+}
+
+.more-details {
+	position: absolute;
+	bottom: 0px;
+	width: 100%;
+	height: 20%;
+	background: linear-gradient( to bottom,
+	rgba(255, 255, 255, 0.0),
+	rgba(48, 48, 48, .8)100%);
+	color: #FFFFFFFF;
+	text-shadow: 0px 0px 5px #050505C6;
+}
+
+.course h6 {
+	text-align: center;
+	height: 4rem;
+	max-height: 3rem;
+}
+
+.course h6+hr {
+	/*margin-top: 0px;*/
+}
+
+.categ-courses {
 	text-align: center;
 }
 
-.course h3+hr {
-	margin-top: 0px;
-}
-
-
-
-
-
-
-
-
-
-/* alternating courses */
-
-
-/*
-.categ-courses .course:nth-child(even) h3{
-	text-align: right;
-}
-
-.categ-courses .course:nth-child(even) .course-desc {
-	float: right;
-	padding-left: 15%;
-	padding-right: 10px;
-	background: linear-gradient( -90deg,
-	rgba(255, 255, 255, 1),
-	rgba(255, 255, 255, .75) 82%,
-	rgba(255, 255, 255, 0.0));
-}
-*/
-
-.course-desc {
-	width: 68%;
-	text-indent: 4rem;
-	text-align: justify;
-	min-height: 300px;
-	max-height: 600px;
-	overflow-y: hidden;
-	padding: 10px;
-	padding-right: 5%;
-	/*padding-right: 15%;*/
-	background: linear-gradient( 90deg,
-	rgba(255, 255, 255, 1),
-	rgba(255, 255, 255, .75) 20%,
-	rgba(255, 255, 255, .75) 90%,
-	rgba(255, 255, 255, 0.0));
-	color: #1E1E1EFF;
-}
-
-.course-desc:hover {
-	overflow-y: auto;
-}
-
-
-.course-desc p {
-	margin-bottom: 0px;
-	font-size: 1.2rem;
-	letter-spacing: 2px;
-}
 
 
 .course-img {
@@ -344,6 +361,159 @@ filter: none;
 
 
 
+
+/* Single Course */
+.single-course .container{
+	padding: initial;
+}
+.single-course .row  p{
+	margin-bottom: initial;
+}
+.single-course .course-info .row > div{
+	margin-bottom: 0.5rem;
+}
+
+.course-inquiry-form {
+	font-size: 1rem;
+	width: 100%;
+	border-radius: 1rem;
+}
+
+.course-inquiry-form input:not([type="submit"]) {
+	height: 2rem;
+	font-size: 0.9rem;
+}
+
+.course-inquiry-form hr {
+	margin: initial;
+	margin-bottom: 0rem;
+}
+form .inquirer-address input {
+	margin-top: 0.5rem;
+}
+
+.multi-course {
+	font-size: inherit !important;
+	margin-bottom: 1rem
+}
+
+
+
+.course-inquiry-form .courseList {
+	padding-top: 2rem;
+	margin-bottom: 2rem;
+}
+
+.course-inquiry-form .select-course {
+	width: 100%;
+	background: initial;
+}
+
+.course-inquiry-form .select-course .row {
+	overflow: initial;
+}
+
+.course-inquiry-form h6 {
+	margin: initial;
+}
+
+.course-inquiry-form .course-category {
+	background: initial;
+	margin-top: 0.5rem;
+	margin-bottom: 0.0rem;
+	text-align: left;
+	color: black;
+}
+
+.form-check-input {
+	position: relative;
+}
+
+.form-check-label {
+	vertical-align: middle;
+}
+
+
+.course-main {
+	position: relative;
+	padding-bottom: 2rem;
+}
+
+.single-course .course-img {
+	position: absolute;
+	width: 100%;
+	height: 60%;
+	max-height: 70vh;
+	background-image: linear-gradient( to bottom,
+	rgba(255, 255, 255, 0.0),
+	rgba(255, 255, 255, 1));
+}
+
+.course-main .extra-padding {
+	padding-top: 25%;
+}
+
+.course-info {
+	position: relative;
+	padding-top: 5%;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+	background-image: linear-gradient( to top,
+	rgba(255, 255, 255, 1),
+	rgba(255, 255, 255, 0.8) 75%,
+	rgba(255, 255, 255, 0.0) 95%);
+}
+
+.course-info h2 {
+	text-shadow: 0px 0px 3px #FFFFFF;
+	color: black;
+}
+
+.course-desc {
+	width: 100%;
+	text-indent: 4rem;
+	text-align: justify;
+	/*min-height: 300px;*/
+	/*max-height: 600px;*/
+	overflow-y: initial;
+	padding-left: inherit;
+	padding-right: inherit;
+	color: #1E1E1EFF;
+}
+
+.course-desc:hover {
+	/*overflow-y: auto;*/
+}
+
+.course-desc p {
+	margin-bottom: 0px;
+	font-size: 1.2rem;
+	/*letter-spacing: 2px;*/
+}
+
+.other-courses{
+	height: 100%;
+	padding: 15px; 
+	border-radius: 1rem;
+	background-color: #D4FCE6FF;
+}
+.other-courses h4{
+	text-align: center;
+}
+.other-courses .list{
+	height: 100%
+	overflow-y: auto;
+}
+.other-courses a{
+	display:block;
+	margin-top: 0.5rem;
+	padding: 0.25rem;
+	border-radius: 0.5rem;
+	background-color: #8DE1BEFF;
+}
+.other-courses a:hover{
+	background-color: #C9F2DED9;
+}
 
 
 
@@ -449,6 +619,9 @@ div.select-course .row {
 
 
 
+
+
+
 /* MEMBERSHIP FORM 
 ---------------------------------- */
 
@@ -464,6 +637,9 @@ div.select-course .row {
 .userCredential {
 	max-width: 500px;
 }
+
+
+
 
 
 
@@ -509,16 +685,6 @@ div.select-course .row {
 
 
 
-
-
-
-
-
-
-
-
-
-
 /* ACCOUNT LOGIN 
 ------------------------------------------ */
 
@@ -545,16 +711,6 @@ div.select-course .row {
 
 
 
-
-
-
-
-
-
-
-
-
-
 /* HOME-LANDING 
 ---------------------------------------------- */
 
@@ -562,10 +718,13 @@ body {
 	margin: 0;
 }
 
+
 /* The hero image */
+
 .hero-image {
+	position: relative;
 	/* Set a specific height */
-	height: 60vh;
+	min-height: 60vh;
 	width: 100%;
 	opacity: 0.9;
 	overflow: hidden;
@@ -574,6 +733,8 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	display: inline-block;
+
+	margin-bottom: 1rem;
 }
 
 
@@ -582,33 +743,35 @@ body {
 
 .hero-text {
 	text-align: center;
-	position: absolute;
 	width: 100%;
-	transform: translateY(-50%);
 	color: white;
 	text-shadow: 2px 4px 2px #000000;
+	margin: auto;
+	
 }
+
 
 /* Place text in the middle of the image */
 
 .hero-text2 {
 	text-align: center;
 	width: 100%;
-	position: absolute;
-	transform: translateY(-50%);
 	color: black;
 	text-shadow: 0 0 3px #D8EDE5FF;
+	margin: auto;
+	padding-top:  50px;
+	padding-bottom: 50px;
 }
 
 
 
 .home.page-body {
 	/*#D8EDE5FF 20%,	*/
-	background: linear-gradient( to bottom,
+	/*background: linear-gradient( to bottom,
 	rgba(52, 183, 202, 1),
 	#ffffff,
 	#ffffff,
-	#ffffff);
+	#ffffff);*/
 	position: relative;
 }
 
@@ -621,7 +784,7 @@ body {
 
 .home section:not(:first-child) {
 	margin-top: 3rem;
-	margin-bottom: : 2rem;
+	margin-bottom:  2rem;
 }
 
 ul.whats-bisd {
@@ -639,6 +802,9 @@ ul.whats-bisd {
 	/*overflow-y: hidden;*/
 	overflow-y: auto;
 }
+
+
+
 
 
 
@@ -706,16 +872,88 @@ ul.whats-bisd {
 	font-family: inherit;
 }
 
-.website-message .message p{
+.home .website-message{
+	height: 300px;
+}
+
+@media screen and (min-width: 700px){
+	.home .website-message{
+		height: 500px;
+	}
+}
+.article-parent{
+	text-align: center;
+	padding-bottom: 40px;
+	padding-top: 30px;
+}
+.article-parent a{
+	position: absolute;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	height: 15%;
+	width: 100%;
+	text-align: center;
+	color: white !important; 
+	background: linear-gradient( to bottom,
+	rgba(255, 255, 255, 0.0),
+	rgba(48, 48, 48, .8)100%);
+}
+
+.article{
+	position: relative;
+	padding: 1rem;
+	width: 85% !important;
+	height: 100%;
 	text-align: justify;
+	overflow: hidden;
+
+	display: inline-flex; 
+	flex-direction: column;
+	flex-wrap: nowrap;
 }
 
 
-.learningCenter h3 {	
+
+.carousel-bg{
+	background-color: #35C9AEFF;
+	width: 90%;
+	height: 90%;
+	position: absolute;
+	z-index: 0;
+}
+.carousel .bg-img-reponsive{
+	z-index: 0;
+	background-position: initial;
+	background-size: 100% 100%;
+}
+.home .carousel{
+	width: 95%;
+	height: 90%;
+	left: 5%;
+	top: 10%;
+	overflow: hidden;
+}
+.home .carousel .carousel-control-prev,
+.home .carousel .carousel-control-next
+{
+	width: 10%;
+}
+
+
+
+
+
+.carousel div{
+	width: 100%;
+	height: 100%;
+}
+
+.learningCenter h3 {
 	text-align: initial;
 }
 
-.learning-center p{
+.learning-center p {
 	text-indent: 4rem;
 	text-align: justify;
 }
@@ -723,18 +961,9 @@ ul.whats-bisd {
 .learningCenter-ph {
 	text-align: center;
 }
-
-
-
-
-
-
-
-
-
-
-
-
+.learningCenter-ph  img{
+	box-shadow: inset 10px 0px 0px 0px #000;
+}
 
 
 
@@ -757,12 +986,27 @@ ul.whats-bisd {
 	padding-bottom: 100px;
 }
 
+/* vc-tbl vertical align using table*/
+.vcenter-tbl-parent {
+	display: table;
+}
+
+.vcenter-tbl {
+	display: table-cell;
+	vertical-align: middle;
+}
+
+
 .vcenter {
 	position: relative;
 	top: 50%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
 }
+
+
+
+
 
 .small-logo {
 	/*width: 5rem;*/
@@ -785,11 +1029,11 @@ ul.whats-bisd {
 	/*rgba(52, 183, 202, 1) 25%,*/
 	min-height: 80vh;
 
-	background: linear-gradient( to bottom,
+	/*background: linear-gradient( to bottom,
 	rgba(52, 183, 202, 1),
 	#FFFFFFFF,
 	#FFFFFFFF,
-	#FFFFFFFF);
+	#FFFFFFFF);*/
 	/*#77ddaa);*/
 }
 
@@ -816,6 +1060,9 @@ ul.whats-bisd {
 .alert hr {
 	margin: 0.5rem 0;
 }
+
+
+
 
 
 
